--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SpotifyStreamer</string>
     <string name="action_settings">Settings</string>
     <string name="search_artist_hint_edittext" translatable="false">Enter an Artist's name</string>
+    <string name="placeholder_artist" translatable="false">The Artist</string>
 </resources>
