--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="search_artist_hint_edittext" translatable="false">Enter an Artist\'s name</string>
     <string name="placeholder_artist" translatable="false">The Artist</string>
+    <string name="parcel_artists_result" translatable="false">ARTISTS_RESULT_KEY</string>
+    <string name="error_failed_to_fetch_data" translatable="false">Failed to fetch data</string>
+    <string name="error_no_artists_are_found" translatable="false">No artists are found</string>
 </resources>
