--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="parcel_artists_result" translatable="false">ARTISTS_RESULT_KEY</string>
     <string name="error_failed_to_fetch_data" translatable="false">Failed to fetch data</string>
     <string name="error_no_artists_are_found" translatable="false">No artists are found</string>
+    <string name="title_activity_top_tracks">TopTracksActivity</string>
+    <string name="hello_world">Hello world!</string>
 </resources>
