--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
     <string name="app_name">Spotify Streamer</string>
     <string name="action_settings">Settings</string>
     <string name="search_artist_hint_edittext" translatable="false">Enter an Artist\'s name</string>
+
+    <!-- Placeholders -->
     <string name="placeholder_artist" translatable="false">The Artist</string>
     <string name="placeholder_track" translatable="false">The Track</string>
     <string name="placeholder_album" translatable="false">The Album</string>
-
 
     <!-- Title of activities -->
     <string name="title_activity_top_tracks" translatable="false">Top 10 Tracks</string>
@@ -23,12 +24,18 @@
     <string name="PARCEL_KEY_TOP_TRACKS_RESULT" translatable="false">PARCEL_KEY_TOP_TRACKS_RESULT</string>
     <string name="PARCEL_KEY_ACTION_BAR_SUBTITLE" translatable="false">PARCEL_KEY_ACTION_BAR_SUBTITLE</string>
     <string name="PARCEL_KEY_PLAYER_INFO" tranclatable="false">PARCEL_KEY_PLAYER_INFO</string>
+    <string name="PARCEL_KEY_CURRENT_TRACK_ID" translatable="false">PARCEL_KEY_CURRENT_TRACK_ID</string>
+    <string name="PARCEL_KEY_MUSIC_IS_PLAYING" translatable="false">PARCEL_KEY_MUSIC_IS_PLAYING</string>
+    <string name="PARCEL_KEY_SEEKBAR_CURRENT_POS" translatable="false">PARCEL_KEY_SEEKBAR_CURRENT_POS</string>
+    <string name="PARCEL_KEY_SEEKBAR_MAX" translatable="false">PARCEL_KEY_SEEKBAR_MAX</string>
 
     <string name="BUNDLE_KEY_ARTIST_ID_AND_NAME" translatable="false">BUNDLE_KEY_ARTIST_ID_AND_NAME</string>
     <string name="INTENT_KEY_ARTIST_ID_AND_NAME" translatable="false">INTENT_KEY_ARTIST_ID_AND_NAME</string>
 
     <string name="BUNDLE_KEY_PLAYER_TRACK_POS" translatable="false">BUNDLE_KEY_PLAYER_TRACK_POS</string>
     <string name="INTENT_KEY_PLAYER_TRACK_POS" translatable="false">INTENT_KEY_PLAYER_TRACK_POS</string>
+
+    <string name="INTENT_KEY_SERVICE_PREVIEW_URL" translatable="false">INTENT_KEY_SERVICE_PREVIEW_URL</string>
 
     <!-- Tags are used for dynamically adding a fragment to the container -->
     <string name="TAG_TOP_TRACKS_FRAGMENT" translatable="false">TAG_TOP_TRACKS_FRAGMENT</string>
